Added variables override file for demo

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -29,7 +29,6 @@
 @import 'components/fill/variables.less';
 @import 'components/fill/styles.less';
 @import 'components/layout-box/styles.less';
-//@import 'components/panel.less';
 @import 'components/scrollbar.less';
 
 /* Views */
@@ -38,3 +37,5 @@
 @import 'views/layout/flex/styles.less';
 @import 'views/layout/divider/styles.less';
 @import 'views/layout/responsive-utilities/styles.less';
+
+@import 'variables.less';
